--- a/src/styles/MyCapsules.css
+++ b/src/styles/MyCapsules.css
@@ -109,3 +109,50 @@ body {
     transform: rotate(360deg);
   }
 }
+.capsule-photo {
+  max-width: 100%;
+  max-height: 80%;
+  object-fit: cover;
+  width: auto;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 1rem;
+}
+.profile-section {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.profile-image-container {
+  margin-top: 30px;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  margin: 0 auto 10px;
+  overflow: hidden;
+  background-color: #ddd;
+}
+
+.profile-photo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.no-photo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  font-size: 14px;
+  color: #888;
+}
+
+.upload-label {
+  background-color: #3498db;
+  color: white;
+  padding: 6px 12px;
+  border-radius: 20px;
+  cursor: pointer;
+  font-size: 14px;
+}
